--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# People that contributed to this project
+# This file listd all contributor to this repository
 
 Fabrice Uwayezu <uwafabrice01@gmail.com>
 Adeniji Olajide <adenijiolajid01@gmail.com>
